[package]
name = "consul"
version = "0.1.0"
authors = ["Bregy Malpartida <bregy.malpartida@utec.edu.pe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.3", features = ["blocking"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }